--- a/index.html
+++ b/index.html
@@ -62,19 +62,15 @@
               </li>
 
               <li class="nav-item">
-                <a target="_blank" href="https://twitter.com/bananacat_erc20"> Twitter(X) </a>
+                <a target="_blank" href="https://twitter.com/bananacat_blast"> Twitter(X) </a>
               </li>
 
               <li class="nav-item">
-                <a target="_blank" href="https://www.dextools.io/app/en/ether/pair-explorer/0x0afd65ec6b286d353c42268738d66bbf56ba9de5"> DexTools </a>
+                <a target="_blank" href="https://raydium.com"> Raydium </a>
               </li>
 
               <li class="nav-item">
-                <a target="_blank" href="https://www.coingecko.com/en/coins/bananacat"> CoinGecko </a>
-              </li>
-
-              <li  class="nav-item">
-                <a href="https://app.uniswap.org/swap?inputCurrency=ETH&outputCurrency=0x0590cc9232ebf68d81f6707a119898219342ecb9" target="_blank"> Buy $BCAT </a>
+                <a target="_blank" href="https://dexscreener.com"> DexScreener </a>
               </li>
 
 
